Edited Lost and Found form
Edited lost and found form:
- added details areas
- still need to edit contact info

--- a/index.html
+++ b/index.html
@@ -160,13 +160,8 @@
                 <input type="text" class="form-control" id="inputEmail" placeholder="Email">
               </div>
             </div>
-            <div class="form-group">
-              <label for="inputPassword" class="col-lg-2 control-label">Password</label>
-              <div class="col-lg-10">
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-              </div>
-            </div>
-  
+            
+        <!-- Details Area -->
             <div class="form-group">
               <div class="inputs">
                 <label class="control-label" for="inputDefault"><strong>Title</strong></label>
@@ -174,6 +169,28 @@
               </div>
             </div>
 
+            <div class="form-group">
+              <div class="inputs">
+                <label class="control-label" for="inputDefault"><strong>What Did You Lose</strong></label>
+                <input type="text" class="form-control" id="inputDefault" placeholder="What did you lose?">
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="inputs">
+                <label class="control-label" for="inputDefault"><strong>When Did You Lose it</strong></label>
+                <input type="text" class="form-control" id="inputDefault" placeholder="When did you lose it?">
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="inputs">
+                <label class="control-label" for="inputDefault"><strong>Contact Info</strong></label>
+                <input type="text" class="form-control" id="inputDefault" placeholder="Contact Info">
+              </div>
+            </div>
+
+          <!-- Upload Image -->
             <div class="form-group">
               <div class="upload_Image">
                 <h6>Upload Image:</h6>
